--- a/inventory_repo/inventory.cfg
+++ b/inventory_repo/inventory.cfg
@@ -14,6 +14,9 @@ openshift_deployment_type=openshift-enterprise
 openshift_release= "3.10"
 openshift_enable_docker_excluder=false
 
+openshift_console_install=true
+openshift_console_hostname=console.apps.mycluster.com
+
 # We need a wildcard DNS setup for our public access to services, fortunately
 # we can use the superb xip.io to get one for free.
 openshift_public_hostname=IBM-OCP-edf2f35682-master-0.IBM-OpenShift.cloud
