--- a/inventory_repo/inventory.cfg
+++ b/inventory_repo/inventory.cfg
@@ -15,7 +15,7 @@ openshift_release= "3.10"
 openshift_enable_docker_excluder=false
 
 openshift_console_install=true
-openshift_console_hostname=console.apps.mycluster.com
+openshift_console_hostname=console.apps.cloudpak.lab
 
 # We need a wildcard DNS setup for our public access to services, fortunately
 # we can use the superb xip.io to get one for free.
